# Bootstrap-Rust-Calendar

./: Cargo.toml  LICENSE  README.md
src/: main.rs
static/: index.html
static/css/: styles.css
static/jquery/: jquery.min.js
static/js/: scripts.js
