[package]
name = "Boostrap-Calendar"
version = "0.1.0"
authors = ["alexcreamer <carebear@nili.ca>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
lazy_static = "*"
cassandra = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
